--- a/themes/next-theme/_config.yml
+++ b/themes/next-theme/_config.yml
@@ -336,11 +336,11 @@ changyan:
 # Available value:
 #    button | slide
 # Warning: Baidu Share does not support https.
-baidushare: true
-#type: slide
+baidushare: 
+ type: button
 
 # Share
-jiathis: true
+jiathis: false
 # Warning: JiaThis does not support https.
 #add_this_id:
 
