--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Steven's blog  #博客名
-subtitle:  点亮一盏灯 给需要的人 #副标题
+subtitle:  点一盏灯 给需要的人 #副标题
 description: #用于搜索无直观体现
 author: Steven Shi #作者
 language: zh-Hans #语言
