--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-search": "^2.1.1",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-git-backup": "^0.1.2",
     "hexo-renderer-ejs": "^0.2.0",
