--- a/themes/next-theme/_config.yml
+++ b/themes/next-theme/_config.yml
@@ -437,6 +437,8 @@ busuanzi_count:
 # tencent_mta:
 
 
+baidu_site_verification: true
+google-site-verification: true
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO
 baidu_push: true
 
@@ -583,7 +585,6 @@ vendors:
   # Internal version: 3.3.0
   # https://github.com/ethantw/Han
   han:
-
 
 
 # Assets
