--- a/themes/next-theme/_config.yml
+++ b/themes/next-theme/_config.yml
@@ -214,6 +214,7 @@ links_title: Friendly links
 links:
   hexo: https://hexo.io/zh-cn/docs
   nexT: http://theme-next.iissnan.com/
+  Lentin Joseph: http://www.technolabsz.com/
 
 
 # ---------------------------------------------------------------
