modify friendly links

--- a/themes/next-theme/_config.yml
+++ b/themes/next-theme/_config.yml
@@ -212,9 +212,7 @@ links_title: Friendly links
 #links_layout: block
 #links_layout: inline
 links:
-  hexo: https://hexo.io/zh-cn/docs
-  nexT: http://theme-next.iissnan.com/
-  Lentin Joseph: http://www.technolabsz.com/
+  Lentin Joseph: http://www.lentinjoseph.com/
 
 
 # ---------------------------------------------------------------
