--- a/themes/next-theme/_config.yml
+++ b/themes/next-theme/_config.yml
@@ -143,7 +143,7 @@ font:
 social:
   Github: https://github.com/stevenshichina
   知乎: http://www.zhihu.com/people/stevenshichina
-  Email: mailto:1554116385@qq.com
+  Email: mailto:steven_1825@163.com
   #wechat: 
 # Social Links Icons
 # Icon Mapping:
