--- a/_config.yml
+++ b/_config.yml
@@ -92,3 +92,10 @@ feed:
   limit: 20
 # baidu share
 baidushare: true #百度分享功能
+# math
+math:
+  engine: 'mathjax' # or 'katex'
+  mathjax:
+    # src: custom_mathjax_source
+    config:
+      # MathJax config
