--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,17 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+#per_page: 1
+index_generator:
+  per_page: 5
+
+archive_generator:
+  per_page: 10
+  yearly: true
+  monthly: true
+
+tag_generator:
+  per_page: 10
 pagination_dir: page
 
 # Extensions
@@ -79,6 +89,9 @@ path: sitemap.xml
 search:
  path: search.xml
  field: post
+# toc
+toc:
+  maxDepth: 3
 
 #RSS 订阅支持
 plugin:
