add hexo-add-copyright page

--- a/themes/next-theme/_config.yml
+++ b/themes/next-theme/_config.yml
@@ -73,14 +73,14 @@ menu_icons:
 
 
 
-# ---------------------------------------------------------------
+## ---------------------------------------------------------------
 # Scheme Settings
 # ---------------------------------------------------------------
 
 # Schemes
 #scheme: Muse
-#scheme: Mist
-scheme: Pisces
+scheme: Mist
+#scheme: Pisces
 
 
 # ---------------------------------------------------------------
