modify friendly links

--- a/themes/next-theme/_config.yml
+++ b/themes/next-theme/_config.yml
@@ -213,6 +213,7 @@ links_title: Friendly links
 #links_layout: inline
 links:
   Lentin Joseph: http://www.lentinjoseph.com/
+  普斯泰科技: http://www.pstech360.com/
 
 
 # ---------------------------------------------------------------
