modify about page

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Steven's blog  #博客名
+title: Steven's space  #博客名
 subtitle:  点一盏灯 给需要的人 #副标题
-description: ROS 学习 
+description: 码农
 author: Steven Shi #作者
 language: zh-Hans #语言
 timezone: #时区
